<resources>
    <string name="app_name">User Account</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget">Forget</string>
    <string name="password_with_q_mark">password?</string>
    <string name="you_don_t_have_an">You don\'t have an</string>
    <string name="account">Account?</string>
    <string name="ahjzli">Ahjzli</string>
    <string name="sign_up">SIGN UP</string>
    <string name="user_name">User name</string>
    <string name="phone_number">Phone number</string>
    <string name="do_you_have_an">Do you have an</string>
    <string name="enter_registered_email_to_reset_your_password">Enter registered email to reset your password</string>
    <string name="forget_password">Forget password!!</string>
    <string name="search">search…</string>
    <string name="branch_name">Branch name</string>
    <string name="send">SEND</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="my_table">My Reservation</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="loge_out">Log out</string>
    <string name="reserve">Reserve</string>
    <string name="store_name">Store Name</string>
    <string name="number_of_tables">Number of tables</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="About">Ahjzli solves the problem of congestion in front of shops, especially restaurants and cafes, by reserved in the application.</string>
    <string name="version">Version</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="user_name_text">User Name:</string>
    <string name="email_text">Email:</string>
    <string name="phone_number_text">Phone Number:</string>
    <string name="how_many_person">How many person?</string>
    <string name="max_capacity">ِAvailable :</string>
    <string name="change_language">Change language:</string>
    <string name="chose_language">Chose Language</string>
    <string name="time">time</string>

</resources>