<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:src="@drawable/ic_maximize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:padding="10dp">
    <EditText
        android:id="@+id/et_storeName_profile"
        android:layout_width="301dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="center"
        android:hint="@string/store_name"
        android:textColor="@color/green"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_email_Profile"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:layout_gravity="center"
        android:hint="@string/branch_name"
        android:textColor="@color/green"
        android:textSize="25sp" />

    <TextView
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:text="@string/number_of_tables"
        android:textColor="@color/green"
        android:layout_margin="10dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnEditConfirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_shape"
        android:text="@string/reserve"
        android:textSize="25sp"
        android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>