<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".registration.SignIn">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/ahjzli"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|top"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/dark_blue"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColorHint="@color/dark_blue"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/dark_blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_email_sign_in"
                        android:layout_width="301dp"
                        android:layout_height="match_parent"
                        android:background="@color/light_silver"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/dark_blue"
                        android:textSize="25sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColorHint="@color/dark_blue"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/dark_blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_password_sign_in"
                        android:layout_width="301dp"
                        android:layout_height="match_parent"
                        android:background="@color/light_silver"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/dark_blue"
                        android:textSize="25sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="54dp"
                        android:minHeight="48dp"
                        android:text="@string/remember_me"
                        android:textColor="@color/dark_blue"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="17dp"
                        android:text="@string/forget"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txt_forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="17dp"
                        android:text="@string/password_with_q_mark"
                        android:textColor="@color/dark_blue" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/btn_shape"
                    android:textColor="@color/white"
                    android:text="@string/sign_in"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="100dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/you_don_t_have_an"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txt_dont_have_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="3dp"
                        android:text="@string/account"
                        android:textColor="@color/dark_blue" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>