<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Profile">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/ahjzli"
        android:textColor="@color/main_color"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/my_profile"
                    android:textColor="@color/main_color"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:id="@+id/linearProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/profile_shape"
                    android:orientation="vertical"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    tools:ignore="MissingConstraints">


                    <TextView
                        android:id="@+id/txt_userName_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="7dp"
                        android:gravity="center"
                        android:hint="@string/user_name"
                        android:textColor="@color/editText_color"
                        android:textSize="25sp"
                        app:drawableStartCompat="@drawable/ic_person"
                        app:drawableTint="@color/editText_color" />

                    <TextView
                        android:id="@+id/txt_email_Profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="7dp"
                        android:gravity="center"
                        android:hint="@string/email"
                        android:textColor="@color/editText_color"
                        android:textSize="25sp"
                        app:drawableStartCompat="@drawable/ic_email"
                        app:drawableTint="@color/editText_color" />

                    <TextView
                        android:id="@+id/txt_Phone_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="7dp"
                        android:gravity="center"
                        android:hint="@string/phone_number"
                        android:textColor="@color/editText_color"
                        android:textSize="25sp"
                        app:drawableStartCompat="@drawable/ic_phone"
                        app:drawableTint="@color/editText_color" />


                </LinearLayout>

                <TextView
                    android:id="@+id/logOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/loge_out"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/ic_logout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearProfile" />

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_shape"
                    android:text="@string/edit"
                    android:textColor="@color/background"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logOut"
                    app:layout_constraintVertical_bias="0.326" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>